tests/neg/i8569.check
-- [E083] Type Error: tests/neg/i8569.scala:13:21 ----------------------------------------------------------------------
13 |  val x = outer.Inner(2) // error (at posttyper)
   |          ^^^^^^^^^^^^^^
   |          Outer is not a valid class prefix, since it is not an immutable path
   |
   | longer explanation available when compiling with `-explain`
